fixed side overflow

--- a/src/pages/Onboarding/style.module.scss
+++ b/src/pages/Onboarding/style.module.scss
@@ -28,6 +28,7 @@
 .editPageContainer {
   @extend .box;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .profileFormContainer {
